# laoren-peiban-zhushou

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  connection.py  repository.py  schema.py
backend/app/schemas/: __init__.py  chat.py  common.py  contact.py  emergency.py  reminder.py  user.py
backend/app/services/: __init__.py  companion.py
backend/tests/: conftest.py  test_app.py  test_smoke.py
deploy/: README.md  docker-compose.server.yml
deploy/nginx/: lr.wxwx.me.conf
docs/: IA.md  PRD.md  TEAM.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BottomNav.tsx  VoiceButton.tsx
frontend/src/lib/: api.ts  webSpeech.ts
frontend/src/pages/: ChatPage.tsx  EmergencyPage.tsx  FamilyPage.tsx  HomePage.tsx  ReminderPage.tsx
